Bug 358247 - "Tile leaked" critical message when closing Krita
Summary: "Tile leaked" critical message when closing Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tile manager (other bugs)
Version First Reported In: 2.9.10
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-20 11:42 UTC by Samuel Frichou
Modified: 2016-01-21 09:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Frichou 2016-01-20 11:42:05 UTC
When closing krita, the following message always appears in terminal.
exact message:
"CRITICAL: According to statistics of the KisTileDataStore some tiles have leaked from the Krita control! 
CRITICAL: Tiles in memory: 933 Total tiles: 1209"

ubuntu 14.04 LTS
uname -a: Linux ** 3.13.0-74-generic #118-Ubuntu SMP Thu Dec 17 22:52:10 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux

lspci: VGA compatible controller: Advanced Micro Devices, Inc. [AMD/ATI] RV770 [Radeon HD 4850] (prog-if 00 [VGA controller])
	Subsystem: PC Partner Limited / Sapphire Technology Radeon HD 4850 512MB GDDR3
	Flags: bus master, fast devsel, latency 0, IRQ 46
	Memory at d0000000 (64-bit, prefetchable) [size=256M]
	Memory at fe8e0000 (64-bit, non-prefetchable) [size=64K]
	I/O ports at b000 [size=256]
	Expansion ROM at fe8c0000 [disabled] [size=128K]
	Capabilities: <access denied>
	Kernel driver in use: radeon

Reproducible: Always

Steps to Reproduce:
1. open a file in Krita (opened via terminal)
2. Manipulate a bit
3. Close Krita and watch terminal

Actual Results:  
The critical message appears in the terminal
Comment 1 Halla Rempt 2016-01-21 08:15:22 UTC
Hi Samuel,

That's more of an informational warning for us developers. Somehow krita managed to leak memory, but unless you remember exactly what you did in the session that gave this output, there isn't much we can do about it. I'll make the warning less scary.
Comment 2 Halla Rempt 2016-01-21 08:17:32 UTC
Git commit fc8bbab0383a338753f15351d59a0126d0e6d6d8 by Boudewijn Rempt.
Committed on 21/01/2016 at 08:14.
Pushed by rempt into branch 'calligra/2.9'.

Make the developer warning about tile leaks less threatening

M  +3    -4    krita/image/tiles3/kis_tile_data_store.cc

http://commits.kde.org/calligra/fc8bbab0383a338753f15351d59a0126d0e6d6d8
Comment 3 Samuel Frichou 2016-01-21 09:15:20 UTC
Thanks, I'll keep an eye out, to see if I can find what is the exact manipulation.
Comment 4 Halla Rempt 2016-01-21 09:28:23 UTC
Git commit 30a1d0a280ca69e3ca86274c60d4ba57bbafbac6 by Boudewijn Rempt.
Committed on 21/01/2016 at 09:27.
Pushed by rempt into branch 'master'.

M  +3    -4    krita/image/tiles3/kis_tile_data_store.cc

http://commits.kde.org/krita/30a1d0a280ca69e3ca86274c60d4ba57bbafbac6