Make the developer warning about tile leaks less threatening

BUG:358247